<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout2"
        android:layout_width="386dp"
        android:layout_height="535dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

        <EditText
            android:id="@+id/editTextBirth"
            android:layout_width="231dp"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="48dp"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout3"
            app:layout_constraintEnd_toEndOf="parent">

        </EditText>

        <EditText
            android:id="@+id/editTextCC"
            android:layout_width="231dp"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/editTextBirth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            app:layout_constraintVertical_bias="0.509">

        </EditText>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="123dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="208dp"
            android:fontFamily="monospace"
            android:gravity="left|center_vertical"
            android:text="@string/label_birth"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="123dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="52dp"
            android:fontFamily="monospace"
            android:gravity="left|center_vertical"
            android:text="@string/label_cc"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="231dp"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177"
            tools:ignore="SpeakableTextPresentCheck">

        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="123dp"
            android:layout_height="45dp"
            android:fontFamily="monospace"
            android:gravity="left|center_vertical"
            android:text="@string/label_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/editTextName"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.621" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout3"
            android:layout_width="358dp"
            android:layout_height="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96">

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:onClick="vote"
                android:tag="@string/btn_op_3"
                android:text="@string/btn_op_3"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.567"
                app:layout_constraintStart_toEndOf="@+id/buttonB"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:onClick="vote"
                android:tag="@string/btn_op_2"
                android:text="@string/btn_op_2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:onClick="vote"
                android:tag="@string/btn_op_1"
                android:text="@string/btn_op_1"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonB"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="193dp"
                android:layout_height="31dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/label_vote"
                app:layout_constraintBottom_toTopOf="@+id/buttonB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textSize="20sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="297dp"
        android:layout_height="123dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTittle"
            android:layout_width="284dp"
            android:layout_height="111dp"
            android:gravity="center"
            android:text="@string/tittle_1"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>